--- a/fluent-validator-core/pom.xml
+++ b/fluent-validator-core/pom.xml
@@ -4,25 +4,21 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>fluent-validator</artifactId>
-		<groupId>com.github.homeant</groupId>
-		<version>1.0.1.RELEASE</version>
+		<groupId>com.github.lemione</groupId>
+		<version>1.0.2.RELEASE</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>fluent-validator-core</artifactId>
+	<artifactId>spring-boot-fluent-validator-core</artifactId>
 
 	<dependencies>
 		<dependency>
-			<groupId>com.baidu.unbiz</groupId>
-			<artifactId>fluent-validator-spring</artifactId>
-		</dependency>
-		<dependency>
-			<artifactId>spring-context-support</artifactId>
-			<groupId>org.springframework</groupId>
-		</dependency>
-		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.baidu.unbiz</groupId>
+			<artifactId>fluent-validator-spring</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
@@ -31,6 +27,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
