--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.github.homeant</groupId>
+	<groupId>com.github.lemione</groupId>
 	<artifactId>fluent-validator</artifactId>
-	<version>1.0.1.RELEASE</version>
+	<version>1.0.2.RELEASE</version>
 
 	<packaging>pom</packaging>
-	<name>fluent-validator</name>
-	<description>fluent-validator</description>
+	<name>spring-boot-fluent-validator</name>
+	<description>spring-boot-fluent-validator</description>
 	<url>https://github.com/homeant/fluent-validator</url>
 
 	<licenses>
@@ -36,13 +37,12 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<!-- 编译时的编码 -->
 		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 
 		<java.version>1.8</java.version>
-		<spring-boot.version>2.2.1.RELEASE</spring-boot.version>
-		<fluent-validator.version>1.0.6</fluent-validator.version>
-		<hibernate-validator.version>6.1.0.Final</hibernate-validator.version>
+		<spring-boot.version>2.3.12.RELEASE</spring-boot.version>
+		<fluent-validator.version>1.0.9</fluent-validator.version>
+		<hibernate-validator.version>6.1.7.Final</hibernate-validator.version>
 		<commons-collections4.version>4.4</commons-collections4.version>
 		<commons-lang3.version>3.9</commons-lang3.version>
 		<guave.version>28.1-jre</guave.version>
@@ -52,7 +52,7 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<!-- Import dependency management from Spring Boot,not include plugin 
+				<!-- Import dependency management from Spring Boot,not include plugin
 					management as the parent import style -->
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
