--- a/spring-boot-starter-fluent-validator/pom.xml
+++ b/spring-boot-starter-fluent-validator/pom.xml
@@ -3,10 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>fluent-validator</artifactId>
-        <groupId>com.github.homeant</groupId>
-        <version>1.0.1.RELEASE</version>
-    </parent>
+		<artifactId>fluent-validator</artifactId>
+		<groupId>com.github.lemione</groupId>
+		<version>1.0.2.RELEASE</version>
+	</parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>spring-boot-starter-fluent-validator</artifactId>
@@ -14,12 +14,14 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>fluent-validator-core</artifactId>
+			<artifactId>spring-boot-fluent-validator-core</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- @ConfigurationProperties annotation processing (metadata for IDEs) -->
@@ -27,6 +29,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -53,7 +56,7 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>7.1.0</version>
+			<version>7.5</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
