--- a/spring-boot-starter-fluent-validator/pom.xml
+++ b/spring-boot-starter-fluent-validator/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-		<artifactId>fluent-validator</artifactId>
-		<groupId>com.github.lemione</groupId>
-		<version>1.0.2.RELEASE</version>
+		<artifactId>spring-boot-fluent-validator</artifactId>
+		<groupId>io.github.lemiones</groupId>
+		<version>1.0.3.RELEASE</version>
 	</parent>
     <modelVersion>4.0.0</modelVersion>
 
